# Kernel-Wealth-Funds

./: .gitignore  CalculateCorrelation.py  GetFunds.py  Login.py  MPT-allocation.py  MVP.py  README.md  get_funds.py  pyproject.toml  test.py
data/: price_changes.csv
development/: initial_ticker_load.py
funds/: emerging-markets.json  global-100.json  global-clean-energy.json  global-dividend-aristocrats.json  global-esg-nzd-hedged.json  global-esg.json  global-green-property.json  global-infrastructure.json  hedged-global-100.json  hedged-global-infrastructure.json  kensho-electric-vehicle-innovation.json  kensho-moonshots-innovation.json  kernel-balanced-fund.json  kernel-cash-plus-fund.json  kernel-high-growth-fund.json  kernel-march-2027-nz-bond-fund.json  kernel-march-2029-nz-bond-fund.json  kernel-nz-bond-fund.json  kernel-us-bond-fund.json  nz-20.json  nz-50-esg-tilted.json  nz-property.json  nz-small-mid-cap-opportunities.json  sp-500-nzd-hedged.json  sp-500-unhedged.json
tickers/: pyproject.toml  tickers.json
tickers/finetuning/: extracted_tickers.json  finetune_model.py
tickers/finetuning/data/: train.jsonl  valid.jsonl
tickers/tickers/: __init__.py
tickers/tickers/Prompts/: Prompts.py
tickers/tickers/Tools/: Tools.py
