[project]
name = "kernelwealthfunds"
version = "0.1.0"
description = "A repository to keep track of the components of Kernel Wealth funds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "tickers",
]

[tool.uv.workspace]
members = ["tickers"]

[tool.uv.sources]
tickers = { workspace = true }
