[project]
name = "kernelwealthfunds"
version = "0.1.0"
description = "A repository to keep track of the components of Kernel Wealth funds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "tickers",
    "yfinance>=0.2.60",
]

[tool.uv.workspace]
members = ["tickers"]

[tool.uv.sources]
tickers = { workspace = true }
